<resources>
    <string name="app_name">Study Helper</string>
    <!-- Strings related to login -->
    <string name="loading_src">App from SLIIT 2021 All Rights Reserved</string>
    <string name="welcome">Welcome</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_Registration">Registration</string>
    <string name="reg_fname">First Name</string>
    <string name="reg_lname">Last Name</string>
    <string name="reg_Teacher">Teacher</string>
    <string name="reg_Student">Student</string>
    <string name="reg_phone">Phone Number</string>
    <string name="reg_cpassword">Confirm Password</string>
    <string name="reg_prompt_Stream">Choose Your Stream</string>
    <string name="Logout">Logout</string>
    <string name="Settings">Settings</string>


    <string-array name="reg_stream">
        <item>Choose…</item>
        <item>Science</item>
        <item>Commerce</item>
    </string-array>
    <string name="app_logo_desc">App logo</string>


    <!-- Student Management-->
    <string name="sm_profile">Profile</string>
    <string name="sm_reqQue">Complain</string>
    <string name="sm_name">Name-</string>
    <string name="sm_email">Email-</string>
    <string name="sm_subject">Subjects-</string>
    <string name="sm_update">Update</string>
    <string name="sm_rq">New complain</string>
    <string name="sm_back">Back</string>
    <string name="sm_search">Search</string>
    <string name="sm_grade_prompt">Choose a grade</string>
    <string-array name="smm_grade_arrays">
        <item>Grade 12</item>
        <item>Grade 13</item>
    </string-array>
    <string name="sm_subject_prompt">Choose a subjects</string>
    <string-array name="smm_subject_arrays">
        <item>Maths</item>
        <item>Phisics</item>
        <item>Chemistry</item>
        <item>IT</item>
        <item>Bio</item>
    </string-array>


    <!-- Teacher Management-->

    <string name="complainTeacher">Complain</string>
    <string name="pdfUpload">PDF</string>
    <string name="linkUpload">Link</string>
    <string name="pdf_upload">Upload</string>

    <string name="No_of_pdf">No of\npdf</string>
    <string name="No_of_links">No of\nlinks</string>

    <string-array name="stream_subj">
        <item>Subject</item>
        <item>Physics</item>
        <item>Combined Maths</item>
        <item>Chemistry</item>
        <item>IT</item>
        <item>Biology</item>
        <item>Agriculture</item>
        <item>Zoology</item>
        <item>Accounting</item>
        <item>Business and Management</item>
        <item>Econ</item>
    </string-array>
    <string name="Teacher_dashboard">dashboard</string>
    <string name="Teacher_Pdf">Pdf</string>
    <string name="Teacher_Links">Links</string>
    <string name="Teacher_complain">Complain</string>
    <string name="Title_sub">Title</string>
    <string name="TitleOfPdfUploder">Pdf</string>
    <string name="TitleOfLinkUploder">Link</string>
    <string name="Recivedtm">Received</string>
    <string name="sent">Sent</string>
    <string name="Sub_name">Subject</string>
    <string name="edit_title">Edit_Title</string>
    <string name="linkUpdate">Link</string>



    <!-- Course Management-->
    <string name="noOfAddedCourses">00</string>
    <string name="noOfResources">00</string>
    <string name="addedCourses">Added Courses</string>
    <string name="addedResources">Added Resources</string>

    <string name="plus">+</string>
    <string name="addCourses">Add Courses</string>
    <string name="addCourse">Add Course</string>
    <string name="updateCourse">Update Course</string>
    <string name="deleteCourse">Delete Course</string>

    <string name="addNewCourse">Add New Course</string>
    <string name="grade">Grade</string>
    <string name="subject">Subject</string>
    <string name="description">Description</string>
    <string name="uploadResources">Upload Resources</string>
    <string name="availableToStudents">Available To Students</string>

    <string name="editCourse">Edit Course</string>
    <string name="download">Download</string>


    <!-- Complain Management-->
    <string name="nav_Dashboard">Dashboard</string>
    <string name="nav_userDtails">User Details</string>
    <string name="nav_Reports">Report</string>
    <string name="nav_complain_History">Complain History</string>
    <string name="Complain">Complain</string>
    <string name="Course">Course</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Sub_name">Subject</string>
    <string name="edit_title">Edit_Title</string>
    <string name="linkUpdate">Link</string>
    <string name="Dash_overview">Overview</string>
    <string name="opt_Logout">Logout</string>
    <string name="opt_Settings">Settings</string>
    <string name="New_complain">New Complains</string>
    <string name="btn_ban">Ban User</string>
    <string name="search">Search User :</string>
    <string name="btn_resolved">Mark as Resolved</string>
    <string name="msg_hint">Type your message</string>
    <string name="btn_com_delete">Delete Resolved Complains</string>
    <string name="TitleOfPdfUploder">Pdf</string>
    <string name="TitleOfLinkUploder">Link</string>
    <string name="Recivedtm">Received</string>
    <string name="sent">Sent</string>


</resources>