<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bglogin"
    android:padding="@dimen/fab_margin"
    android:orientation="vertical"
    android:gravity="center_vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:textAlignment="center"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/login_Registration"
            android:textColor="@color/harbor_grey"
            android:textSize="32sp"/>

        <EditText
            android:id="@+id/etRegfname"
            android:layout_width="337dp"
            android:layout_height="40dp"
            android:layout_marginTop="28sp"
            android:background="@drawable/roundedtext"
            android:gravity="center"
            android:hint="@string/reg_fname"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/etReglname"
            android:layout_width="337dp"
            android:layout_height="40dp"
            android:layout_marginTop="15sp"
            android:background="@drawable/roundedtext"
            android:gravity="center"
            android:hint="@string/reg_lname"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="20sp"/>

        <RadioGroup
            android:layout_width="337dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20sp"
                android:buttonTint="@color/white"
                android:text="@string/reg_Student"
                android:textColor="@color/harbor_grey"
                android:textSize="20sp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:buttonTint="@color/white"
                android:text="@string/reg_Teacher"
                android:textColor="@color/harbor_grey"
                android:textSize="20sp"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="337dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/reg_prompt_Stream"
                android:textSize="20sp"
                android:textColor="@color/harbor_grey"/>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="10sp"
                android:gravity="right"
                android:entries="@array/reg_stream"
                android:background="@color/harbor_grey"
                android:popupBackground="@color/drop_down"/>
        </LinearLayout>

        <EditText
            android:id="@+id/et_Regemail"
            android:layout_width="337dp"
            android:layout_height="40dp"
            android:layout_marginTop="15sp"
            android:background="@drawable/roundedtext"
            android:gravity="center"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/et_Regphn"
            android:layout_width="337dp"
            android:layout_height="40dp"
            android:layout_marginTop="15sp"
            android:background="@drawable/roundedtext"
            android:gravity="center"
            android:hint="@string/reg_phone"
            android:inputType="phone"
            android:selectAllOnFocus="true"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/et_Regpwd"
            android:layout_width="337dp"
            android:layout_height="40dp"
            android:layout_marginTop="15sp"
            android:background="@drawable/roundedtext"
            android:gravity="center"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/et_Regcpwd"
            android:layout_width="337dp"
            android:layout_height="40dp"
            android:layout_marginTop="15sp"
            android:background="@drawable/roundedtext"
            android:gravity="center"
            android:hint="@string/reg_cpassword"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="20sp"/>

        <android.widget.Button
            android:id="@+id/btnRegDetails"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="30sp"
            android:layout_marginBottom="10sp"
            android:background="@drawable/button"
            android:backgroundTint="@color/login_green"
            android:text="@string/register"
            android:textColor="@color/dark_grey"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>