<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bglogin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <EditText
        android:id="@+id/username"
        android:layout_width="337dp"
        android:layout_height="39dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/roundedtext"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="337dp"
        android:layout_height="39dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/roundedtext"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/sign_in"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <android.widget.Button
        android:id="@+id/login"
        android:layout_width="312dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/button"
        android:enabled="false"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.2" />

    <android.widget.Button
        android:id="@+id/register"
        android:layout_width="312dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/button"
        android:enabled="false"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.384" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="36dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/button4"
        android:layout_width="93dp"
        android:layout_height="48dp"
        android:layout_marginEnd="28dp"
        android:hint="@string/Teacher"
        android:onClick="gotoTMProfile"
        android:text="@string/Teacher"
        app:layout_constraintEnd_toStartOf="@+id/complain"
        tools:layout_editor_absoluteY="640dp" />

    <Button
        android:id="@+id/student"
        android:layout_width="89dp"
        android:layout_height="53dp"
        android:hint="@string/Student"
        android:onClick="gotoSMProfile"
        android:text="@string/Student"
        tools:layout_editor_absoluteX="309dp"
        tools:layout_editor_absoluteY="654dp" />

    <Button
        android:id="@+id/Course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:hint="@string/Course"
        android:onClick="gotoCMProfile"
        android:text="@string/Course"
        app:layout_constraintEnd_toStartOf="@+id/student"
        app:layout_constraintStart_toEndOf="@+id/complain"
        tools:layout_editor_absoluteY="658dp" />

    <Button
        android:id="@+id/complain"
        android:layout_width="73dp"
        android:layout_height="50dp"
        android:hint="@string/Complain"
        android:onClick="gotoCHProfile"
        android:text="@string/Complain"
        tools:layout_editor_absoluteX="110dp"
        tools:layout_editor_absoluteY="643dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="118dp"
        android:layout_height="43dp"
        android:text="@string/welcome"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="124dp" />

</androidx.constraintlayout.widget.ConstraintLayout>