<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CourseMFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/pagebackground"
        android:orientation="vertical"
        tools:context=".CM_Main">

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="415dp"
            android:layout_height="218dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="410dp"
                android:layout_height="198dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/circular_text_view"
                    android:gravity="center"
                    android:text="@string/noOfAddedCourses"
                    android:textColor="#006064" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/circular_text_view"
                    android:gravity="center"
                    android:text="@string/noOfResources"
                    android:textColor="#006064" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/addedCourses"
                    android:textColor="#455A64" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/addedResources"
                    android:textColor="#455A64" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="164dp"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/button5"
                android:layout_width="169dp"
                android:layout_height="130dp"
                android:background="@drawable/circular_text_view"
                android:text="@string/plus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="224dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/button6"
                android:layout_width="169dp"
                android:layout_height="130dp"
                android:background="@drawable/circular_text_view"
                android:text="@string/plus" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>